DCP2-535 - stop truncating expanded entries (#80)
* do not paginate expanded lists - assume the user knows what they're doing

* style tweaks, approved by burkebri

--- a/app/assets/stylesheets/dul-arclight/modules/show_component.scss
+++ b/app/assets/stylesheets/dul-arclight/modules/show_component.scss
@@ -31,6 +31,8 @@
   }
   .al-document-extent {
     @include extent-badge;
+    display: block;
+    width: min-content;
     font-size: 0.75rem;
   }
 
