--- a/app/assets/stylesheets/umich-arclight/_collections.scss
+++ b/app/assets/stylesheets/umich-arclight/_collections.scss
@@ -11,6 +11,10 @@ nav#about-collection-nav {
 
 #documents {
   margin-left: 3rem;
+
+  h3 {
+    margin-bottom: 0;
+  }
 }
 
 .indented {
